--- a/.gitignore
+++ b/.gitignore
@@ -26,11 +26,11 @@ pip-log.txt
 .tox
 nosetests.xml
 
-# Translations
-*.mo
-
 # Mr Developer
-.mr.developer.cfg
 .project
 .pydevproject
 .settings
+
+# IntelliJ PyCharm
+.idea
+
